syntax = "proto3";

package userpackage;

service UserService {
  rpc getUser (UserId) returns (User);
  rpc changeUser (User) returns (User);
  rpc addFriend (FriendId) returns (Message);
  rpc getFriends(UserId) returns (FriendList);
}

message User {
  string id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  int32 age = 5;
}


message FriendList {
  repeated User friends = 1;
}

message UserId {
  string id = 1;
}

message FriendId {
  string id = 1;
  string friendId = 2;
}

message Message {
  string message = 1;
}
